fix(viewer): fixed the alignments of the lg blocks (no longer side-by-side on some pages). The line numbers are also further apart from the verses.

--- a/frontend/assets/css/text-viewer2.scss
+++ b/frontend/assets/css/text-viewer2.scss
@@ -1055,8 +1055,18 @@ $render-sic: false;
     display: inline-block;
   }
 
+  // POETRY ------
+
   .list-tei-l {
-    display: inline-block;
+    display: block;
+    width: fit-content;
+    // margin for the .line-number
+    padding-right: 2.5em;
+    position: relative;
+  }
+
+  .tei-lg {
+    display: block;
   }
 
   .tei-l {
@@ -1064,10 +1074,13 @@ $render-sic: false;
     display: block;
 
     .line-number {
-      float: right;
-      padding-left: 2em;
+      position: absolute;
+      width: 2em;
+      right: -0.5em;
     }
   }
+
+  // -------------
 
   .tei-seg[data-tei-rend*="centre"] {
     // 1.4.last
